--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,10 @@ handlers:
   static_files: noun_project_3177.svg
   upload: favicon\.ico
 
+- url: /static
+  static_dir: static
+
+
 - url: .*
   script: main.app
   secure: always
